[package]
name = "p2p-ft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version="3", features=["derive", "env"] }
rustun = "0.4.0"
fibers_transport = "0.1.3"
futures = "0.3.24"
fibers_global = "0.1.2"
stun_codec = "0.2.0"
trackable = "1"
net2 = "0.2.37"

[[bin]]
name= "p2p-ft"
path= "src/main.rs"

