[package]
name = "p2p-ft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version="3", features=["derive", "env"] }
net2 = "0.2.37"
indicatif = "0.17.1"

[[bin]]
name= "p2p-ft"
path= "src/main.rs"

